--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <img src="VnxToLs.png" alt="dividing line">
     <h2> Join us </h2> 
     <a href="https://discord.gg/6TdqnJG5"> Join our discord server </a>
-      <h2> Please fill in this form to join our whatsapp group. </h2>
+      <h2> Please fill in this form to join our whatsapp group. (Note that this doesnt work right now) </h2>
       <form action="https://google.com">
       <input required type="number" name="UID" placeholder="Your UID">
       <input required type="number" name="Phone Number" placeholder="Your phone number">
