--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
 <body>
   <main>
-    <h1>Welcome to the official website of the whatsapp group emergency food. </h1>
-    <h2>To the stars and the abyss.</h2>
+    <h1>EMERGENCY FOOD</h1>
+    <h2>Ad astra abyssosque</h2>
   </main>
   <img src="VnxToLs.png" alt="dividing line">
   <section>
