--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+  <div class="main">
   <main>
     <h1>EMERGENCY FOOD</h1>
     <h2>Ad astra abyssosque</h2>
@@ -37,6 +38,7 @@
 </body>
 <footer>
   <h6>©2023 Polaris2001</h6>
-  <h6>Ver 0.1.1.2</h6>
+  <h6>Ver 0.1.1.3</h6>
 </footer>
+  </div> 
 </html>
