--- a/index.html
+++ b/index.html
@@ -16,11 +16,10 @@
   </main>
   <img src="VnxToLs.png" alt="dividing line">
   <section>
-    <h2>About us</h2>
-    <h3>We are a group of people dedicated to the game Genshin Impact. </h3>
-    <img src="VnxToLs.png" alt="dividing line">
-    <h2> Our goals </h2>
-    <ul>
+    <h2 class="aboutus">About us</h2>
+    <h3 class="aboutus">We are a group of people dedicated to the game Genshin Impact. </h3>
+    <h2 class="goals"> Our goals </h2>
+    <ul class="goals">
        <li> To make everyone addicted to the game Genshin Impact </li>
        <li> Curse others with a qiqi </li> 
        <li> Discover the best way to eat paimon </li>
@@ -38,7 +37,7 @@
 </body>
 <footer>
   <h6>©2023 Polaris2001</h6>
-  <h6>Ver 0.1.1.3</h6>
+  <h6>Ver 0.1.2.0<h6>
 </footer>
   </div> 
 </html>
