--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
        <li> Curse others with a qiqi </li> 
        <li> Discover the best way to eat paimon </li>
     </ul>
+    <a href="member.html">Our members</a>
     <img src="VnxToLs.png" alt="dividing line">
     <h2> Join us </h2> 
     <a href="https://discord.gg/6TdqnJG5"> Join our discord server </a>
@@ -37,7 +38,7 @@
 </body>
 <footer>
   <h6>©2023 Polaris2001</h6>
-  <h6>Ver 0.1.2.0<h6>
+  <h6>Ver 0.2.0.0<h6>
 </footer>
   </div> 
 </html>
