--- a/member.html
+++ b/member.html
@@ -3,7 +3,7 @@
 <html>
   
   <head>
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="Styles.css" rel="stylesheet" type="text/css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="UTF-8">
     <title>Emergency Food - Our members</title>
