--- a/member.html
+++ b/member.html
@@ -58,7 +58,7 @@
     </div>
     </main>
   </body>
-  
+  <img src="VnxToLs.png" alt="dividing line">
   <footer>
     <h6>©2023 Polaris2001</h6>
   </footer>
