--- a/member.html
+++ b/member.html
@@ -45,13 +45,13 @@
         <article class="person">
           <p class="name">Kortnie</p><p class="tel">92933338</p><p class="uid">901269759</p>
         </article>
-        <article>
+        <article class="person">
           <p class="name">Selena</p><p class="tel">62296700</p><p class="uid">905043131</p>
         </article>
-        <article>
+        <article class="person">
           <p class="name">Aster</p><p class="tel">60910084</p><p class="uid">906341824</p>
         </article>
-        <article>
+        <article class="person">
           <p class="name">Hannah</p><p class="tel">68463142</p><p class="uid">906118741</p>
         </article>
       </section>
