--- a/member.html
+++ b/member.html
@@ -60,6 +60,7 @@
   </body>
   <img src="VnxToLs.png" alt="dividing line">
   <footer>
+    <a href="index.html">Return to home</a>
     <h6>©2023 Polaris2001</h6>
   </footer>
   
