--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
        <li> Curse others with a qiqi </li> 
        <li> Discover the best way to eat paimon </li>
     </ul>
-    <a href="member.html">Our members</a>
+    <a href="member.html" class="members-link">Our members</a>
     <img src="VnxToLs.png" alt="dividing line">
     <h2> Join us </h2> 
     <a href="https://discord.gg/6TdqnJG5"> Join our discord server </a>
@@ -40,7 +40,7 @@
     
 <footer>
   <h6>©2023 Polaris2001</h6>
-  <h6>Ver 0.2.1.4</h6>
+  <h6>Ver 0.2.1.5<h6>
 </footer>
 
 </html>
