--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h1>EMERGENCY FOOD</h1>
     <h2>Ad astra abyssosque</h2>
   </main>
-  <img src="VnxToLs.png" alt="dividing line">
+  <hr class="dividing-line">
   <section>
     <h2 class="aboutus">About us</h2>
     <h3 class="aboutus">We are a group of people dedicated to the game Genshin Impact. </h3>
@@ -26,7 +26,7 @@
        <li> Discover the best way to eat paimon </li>
     </ul>
     <p class="members-link"><a href="member.html">Our members</a></p>
-    <img src="VnxToLs.png" alt="dividing line">
+    <hr class="dividing-line">
     <h2> Join us </h2> 
     <a href="https://discord.gg/6TdqnJG5"> Join our discord server </a>
       <h2> Fill in this form to join our whatsapp group. (Doesn't work right now)</h2>
@@ -36,11 +36,11 @@
       <button type="submit"> Submit </button> 
   </section>
   <script src="script.js"></script>
+  <hr class="dividing-line">
+  <footer>
+    <h6>©2023 Polaris2001</h6>
+    <h6>Ver 0.2.3.0</h6>
+  </footer>
 </body>
     
-<footer>
-  <h6>©2023 Polaris2001</h6>
-  <h6>Ver 0.2.2.1</h6>
-</footer>
-
 </html>
