--- a/member.html
+++ b/member.html
@@ -14,7 +14,7 @@
       <h1>EMERGENCY FOOD</h1>
       <h2>Ad Astra Abyssosque</h2>
     </div>
-    <img src="VnxToLs.png" alt="dividing line">
+    <hr class="dividing-line">
     <main>
     <div class="members">
       <section> 
@@ -58,7 +58,7 @@
     </div>
     </main>
   </body>
-  <img src="VnxToLs.png" alt="dividing line">
+  <hr class="dividing-line">
   <footer>
     <a href="index.html">Return to home</a>
     <h6>©2023 Polaris2001</h6>
