--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <h2> Fill in this form to join our whatsapp group. (Doesn't work right now)</h2>
       <form action="https://google.com">
       <fieldset>
-        <label>Enter your name here: <input required type="text" name="name"></label>
+        <label>Enter your name here: <input required type="text" name="apply-name"></label>
         <label>Enter your genshin UID here: <input required type="number" name="UID"></label>
         <label>Enter your phone number here: <input required type="number" name="Phone Number"></label>
         <button type="submit"> Submit </button>
