--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
       <form action="https://google.com">
       <fieldset>
         <label>Enter your name here: <input required type="text" name="apply-name"></label>
-        <label>Enter your genshin UID here: <input required type="number" name="UID"></label>
-        <label>Enter your phone number here: <input required type="number" name="Phone Number"></label>
+        <label>Enter your genshin UID here: <input required minlength="9" type="number" name="UID"></label>
+        <label>Enter your phone number here: <input required minlength="8" type="number" name="Phone Number"></label>
         <button type="submit"> Submit </button>
       </fieldset>
   </section>
