--- a/index.html
+++ b/index.html
@@ -31,9 +31,13 @@
       <h2> Fill in this form to join our whatsapp group. (Doesn't work right now)</h2>
       <form action="https://google.com">
       <fieldset>
-        <label>Enter your name here: <input required type="text" name="apply-name"></label>
-        <label>Enter your genshin UID here: <input required minlength="9" type="number" name="UID"></label>
-        <label>Enter your phone number here: <input required minlength="8" type="number" name="Phone Number"></label>
+        <label for="apply-name">Enter your name here: <input id="apply-name" required type="text" name="apply-name"></label>
+        <label for="UID">Enter your genshin UID here: <input id="UID" required minlength="9" type="number" name="UID"></label>
+        <label for="phone-number">Enter your phone number here: <input id="phone-number" required minlength="8" type="number" name="Phone Number"></label>
+        <h3>Which pronouns should we use to refer to you?</h3>
+        <label for="male"><input id="male" name="pronoun" type="radio"> He/Him </input></label>
+        <label for="female"><input id="female" name="pronoun" type="radio"> She/Her </input></label>
+        <label for="neutral"><input id="neutral" name="pronoun" type="radio"> They/Them </input></label>
         <button type="submit"> Submit </button>
       </fieldset>
   </section>
@@ -41,7 +45,7 @@
   <hr class="dividing-line">
   <footer>
     <h6>©2023 Polaris2001</h6>
-    <h6>Ver 0.2.4.1</h6>
+    <h6>Ver 0.2.4.2</h6>
   </footer>
 </body>
     
