--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
         <label for="UID">Enter your genshin UID here: <input id="UID" required minlength="9" type="number" name="UID"></label>
         <label for="phone-number">Enter your phone number here: <input id="phone-number" required minlength="8" type="number" name="Phone Number"></label>
         <h3>Which pronouns should we use to refer to you?</h3>
-        <label for="male"><input id="male" name="pronoun" type="radio"> He/Him </input></label>
-        <label for="female"><input id="female" name="pronoun" type="radio"> She/Her </input></label>
-        <label for="neutral"><input id="neutral" name="pronoun" type="radio"> They/Them </input></label>
+        <label for="male"><input id="male" name="pronoun" type="radio"> He/Him </label>
+        <label for="female"><input id="female" name="pronoun" type="radio"> She/Her </label>
+        <label for="neutral"><input id="neutral" name="pronoun" type="radio"> They/Them </label>
         <button type="submit"> Submit </button>
       </fieldset>
   </section>
