--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+8<!DOCTYPE html>
 
 <html>
 
@@ -27,7 +27,7 @@
     <p class="members-link"><a href="member.html">Our members</a></p>
     <hr class="dividing-line">
     <h2> Join us </h2> 
-    <a href="https://discord.gg/6TdqnJG5"> Join our discord server </a>
+    <a href="https://discord.gg/WDumfWRKfX"> Join our discord server </a>
       <h2> Fill in this form to join our whatsapp group. (Doesn't work right now)</h2>
       <form action="https://google.com">
       <fieldset>
