--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <h2> Join us </h2> 
     <a href="https://discord.gg/WDumfWRKfX"> Join our discord server </a>
       <h2> Fill in this form to join our whatsapp group. (Doesn't work right now)</h2>
+      <div class="form">
       <form action="https://google.com">
       <fieldset>
         <label for="apply-name">Enter your name here: <input id="apply-name" required type="text" name="apply-name"></label>
@@ -40,6 +41,7 @@
         <label for="neutral"><input id="neutral" name="pronoun" type="radio"> They/Them </label>
         <button type="submit"> Submit </button>
       </fieldset>
+      </div>
   </section>
   <script src="script.js"></script>
   <hr class="dividing-line">
